add new endpoint /v1/models and remove 500 statuses
